Correct text overflow on small screens

--- a/styles.css
+++ b/styles.css
@@ -44,11 +44,12 @@ h1 {
   height: 30px;
   text-align: center;
   margin-bottom: 20px;
+  overflow: hidden;
 }
 
 #message {
   display: inline-block;
-  width: 10%;
+  width: 20%;
 }
 
 .selected {
@@ -63,7 +64,6 @@ button {
   height: 100%;
   font-weight: bold;
   color: steelblue;
-  letter-spacing: 1px;
   font-size: inherit;
   -webkit-transition: all .3s;
   -moz-transition: all .3s;
